@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 28, 2010</p>
+      <p>Last Updated: April 4, 2010</p>
     </td>
   </tr>
 </table>
@@ -1660,9 +1660,10 @@ nuttx-5.3 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Several important compilation error fixes in lpc313x and (dualspeed) USB
 	  code also contributed by David Hewson.
 	* arch/arm/src/sam3u/sam3u_dmac.c - DMA support for the AT90SAM3U.
-	  (incomplete on initial checkin).
+	  (untested on initial checkin).
 	* arch/arm/src/sam3u/sam3u_hsmci.c - SD memory card support for AT90SAM3U
 	  (incomplete on initial checkin).
+	* drivers/usbdev - Several important fixes to the USB mass storage driver
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
